// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeObject - simple 1`] = `
Object {
  "merge": 2,
  "one": 1,
  "two": 2,
}
`;

exports[`mergeObject - simple 2`] = `
Object {
  "merge": 2,
  "one": 1,
  "two": 2,
}
`;

exports[`mergeObject 1`] = `
Object {
  "additionalString": "additionalString",
  "array": Array [
    11,
  ],
  "nestedObject": Object {
    "additionalNumber": 11,
    "array": Array [
      22,
    ],
    "object": Object {
      "l": 11,
      "m": 2,
      "s": 3,
    },
    "string": "string 2",
  },
  "number": 11,
  "object": Object {
    "l": 1,
    "m": 2,
    "s": 33,
  },
  "string": "string 2",
}
`;

exports[`mergeTheme - tokens with component 1`] = `
Object {
  "Button": ThemeBuilder {
    "compute": [Function],
    "merge": [Function],
    "theme": Object {
      "slots": Object {
        "Button": Object {
          "styles": Array [
            Object {
              "width": 100,
            },
          ],
          "type": undefined,
        },
      },
    },
  },
  "Text": ThemeBuilder {
    "compute": [Function],
    "merge": [Function],
    "theme": Object {
      "slots": Object {
        "Text": Object {
          "styles": Array [
            Object {
              "width": 200,
            },
          ],
          "type": undefined,
        },
      },
    },
  },
  "one": "1",
  "two": "2",
}
`;

exports[`mergeTheme - tokens with same component 1`] = `
Object {
  "Button": ThemeBuilder {
    "compute": [Function],
    "merge": [Function],
    "theme": Object {
      "slots": Object {
        "Button": Object {
          "styles": Array [
            Object {
              "height": 100,
              "width": 200,
            },
          ],
          "type": undefined,
        },
      },
    },
  },
  "one": "1",
  "two": "2",
}
`;

exports[`mergeTheme - with component 1`] = `
Object {
  "Button": ThemeBuilder {
    "compute": [Function],
    "merge": [Function],
    "theme": Object {
      "slots": Object {
        "Button": Object {
          "styles": Array [
            Object {
              "width": 100,
            },
          ],
          "type": undefined,
        },
      },
    },
  },
  "Text": ThemeBuilder {
    "compute": [Function],
    "merge": [Function],
    "theme": Object {
      "slots": Object {
        "Text": Object {
          "styles": Array [
            Object {
              "width": 200,
            },
          ],
          "type": undefined,
        },
      },
    },
  },
}
`;
